--- a/templates/blocks/moving-containers.css
+++ b/templates/blocks/moving-containers.css
@@ -15,6 +15,7 @@
   font-weight: bold;
   white-space: nowrap;
   font-size: 1.5em;
+  color: #777;
   left: -10000;
   cursor: pointer;
   -webkit-touch-callout: none;
