--- a/templates/super/page.tmpl
+++ b/templates/super/page.tmpl
@@ -4,6 +4,10 @@
   // Default: undefined
   // extends:"<super_template.tmpl>",
 
+  // An array of roles that have permission to access the template
+  // Default: ["*"]
+  // access: ["*"],
+
   // Automatic template update mode when the argument changes.
   // Acceptable values:
   //   true|"all" - The update is performed on any change
@@ -35,6 +39,16 @@
   // a wrapper is not created for it, and its arguments are not available on the client.
   // Default: true
   wrapper: true,
+
+  // DOM elements merge flag.
+  // If true, then existing items are not replaced when updated, but updated.
+  // Default: false
+  merge: false,
+
+  // If set to true, the DOM elements are not changed by default when the template is updated.
+  // To update DOM elements on update, you need to call the update|reload|refresh methods with the updateStatic flag.
+  // Default: false
+  static: false,
 
   // Saving the initial values of children template arguments.
   // This option can be overridden by the fcfInitialStorageOfChildren template argument.
